--- a/forma za Losmija/css/style.css
+++ b/forma za Losmija/css/style.css
@@ -38,12 +38,12 @@ body{
 	height:50;
 }
 .naslov{
-	font-size:0.75em;
+	font-size:0.75em !important;
 	border-bottom: 0.16em solid black;
-	padding:0.85em;
-	margin:0.75em;
-	height:3em;
-	width:12em;
+	padding:0.85em !important;
+	margin:0.75em !important;
+	height:3em !important;
+	width:12em !important;
 	float:left;
 }
 .forma{
@@ -53,6 +53,11 @@ body{
 	list-style-type: none;
 	height:2.10em !important;
 	font-size:1em !important;
+}
+.forma input{
+	height:1.15em;
+	margin:0;
+	width:11.35em;
 }
 #content{
 	margin:0;
@@ -70,11 +75,11 @@ body{
 	width:16em !important;
 }
 .btn{
-	margin:0.65em;
+	margin:0.65em !important;
 	background-color:#3D3C3A;
-	border-radius:0.75em;
-	height:2.15em;
-	width:4.75em;
+	border-radius:0.75em !important;
+	height:2.15em !important;
+	width:4.75em !important;
 	color:white;
 }
 .btn1{
@@ -196,4 +201,4 @@ body{
 	height:20.50em;
 	width:14em;
 }
-}
+} 
